--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,8 @@ header h1 {
   color: #ffffff;
 }
 
-a:link {
-  color: gray;
+a:links {
+  color: blue;
 }
 
 a:active {
@@ -75,22 +75,20 @@ a:visited {
 }
 
 .links-container {
-  display: flex;
-  flex-direction: column;
-  background-color: #edeae9;
-  width: 30%;
-  margin: 15px auto;
+  display: inline-flex;
+  width: 25%;
+  height: auto;
+  margin: 10px auto;
+  background-color: #ffffff;
   border-radius: 50px;
-  padding: 5px 5px;
 }
 
 .fa-links {
   display: flex;
   text-align: left;
-  gap: 10px;
+  gap: 20px;
   padding: 10px;
   margin: 0 auto;
-  color: rgb(132, 61, 73);
   text-decoration: none;
   font-size: medium;
 }
