--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,9 @@ body {
     rgb(249, 140, 69) 72.5%,
     rgb(12, 73, 116) 72.6%
   );
-  padding: 20px auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 10px 20px;
 }
 
 h1,
@@ -34,12 +36,14 @@ ul {
 }
 
 .resume-container {
+  display: grid;
+  max-width: fit-content;
   color: #8b9eab;
   position: relative;
   margin: 20px auto;
   padding: 20px 40px;
-  width: 1400px;
-  height: 1500px;
+  max-width: 100%;
+  max-height: 100%;
   border-radius: 14px;
   overflow: hidden;
   align-items: center;
@@ -75,12 +79,15 @@ a:visited {
 }
 
 .links-container {
-  display: inline-flex;
-  width: 25%;
-  height: auto;
-  margin: 10px auto;
+  display: inline-block;
+  flex-direction: row;
+  max-width: fit-content;
+  margin: 10px 60px;
   background-color: #ffffff;
   border-radius: 50px;
+  padding: 5px;
+  justify-content: center;
+  align-items: center;
 }
 
 .fa-links {
@@ -91,4 +98,10 @@ a:visited {
   margin: 0 auto;
   text-decoration: none;
   font-size: medium;
+}
+
+@media (max-width: 960px) {
+  h3 {
+    text-align: center;
+  }
 }
